kubernetes/hello-world-deployment.yml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: demo-hello-world-java
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: hello-world-java/hello-world
          ports:
            - containerPort: 80
  selector:
    app: hello-world
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - hello-world
        from:
          kind: ImageStreamTag
          name: hello-world:latest
  strategy:
    type: Rolling
  paused: false
  revisionHistoryLimit: 2
  minReadySeconds: 0
