kubernetes/hello-world-service.yml
kind: Service
apiVersion: v1
metadata:
  name: demo-hello-world-java
spec:
  selector:
    app: hello-world
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
